tests/baselines/reference/parserReturnStatement1.d.errors.txt
parserReturnStatement1.d.ts(1,1): error TS1036: Statements are not allowed in ambient contexts.


==== parserReturnStatement1.d.ts (1 errors) ====
    return;
    ~~~~~~
!!! error TS1036: Statements are not allowed in ambient contexts.